--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,36 @@
-theme: jekyll-theme-merlot
-title: Welcome to Yu Tian's homepage!
-description: Feel free to bookmark this to keep an eye on my project updates.
+highlighter: rouge
+markdown: kramdown
+rdiscount:
+  extensions: [smart]
+permalink: :title.html
+paginate: 5
+plugins: [jekyll-paginate]
+port: 4000
+safe: true
+url: http://jekyller.github.io/vitae
+author: Fábio Madeira
+
+# edit this section with your information
+# jekyller.github.io - all contents run on /vitae/
+# for a normal use at the base of the server change it to "/"
+baseurl: /vitae/
+title: Yu Tian's Resume
+name: Yu Tian
+email: yu.tian8328@gmail.com
+email_full: mailto:yu.tian8328@gmail.com
+website: github.io/sustain
+website_full: https://jekyller.github.io/sustain
+github: trending
+twitter: twitter
+tel: +44 0000 000000
+tel_full: tel:+440000000000
+google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
+address:
+  street: 44 Perth Street
+  postcode: EH3 5BL
+  city: Edinburgh
+  country: United 
+google_analytics: UA-69300817-1
+
+# needed for travis-ci build
+exclude: [vendor]
