--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 highlighter: rouge
 markdown: kramdown
 rdiscount:
-  extensions: [smart]
+extensions: [smart]
 permalink: :title.html
 paginate: 5
 plugins: [jekyll-paginate]
@@ -13,7 +13,7 @@ author: Fábio Madeira
 # edit this section with your information
 # jekyller.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
-baseurl: /vitae/
+baseurl: /
 title: Yu Tian's Resume
 name: Yu Tian
 email: yu.tian8328@gmail.com
